run IntelliJ code clean up