@@ -1,49 +1,47 @@
 package de.glasergl.appointment.helper.util.file.test;
 
-import static de.glasergl.appointment.helper.util.entity.ExampleAppointmentFactory.TEST_APPOINTMENT_1;
-import static de.glasergl.appointment.helper.util.entity.ExampleAppointmentFactory.TEST_APPOINTMENT_2;
-import static de.glasergl.appointment.helper.util.entity.ExampleAppointmentFactory.TEST_APPOINTMENT_3;
+import de.glasergl.appointment.helper.util.file.AppointmentsConfigurationHandler;
+import de.glasergl.appointment.helper.util.test.GeneralTestElements;
+import org.junit.Test;
+
+import java.util.Arrays;
+import java.util.List;
+
+import static de.glasergl.appointment.helper.util.entity.ExampleAppointmentFactory.*;
 import static de.glasergl.appointment.helper.util.test.GeneralTestElements.BASE_TEST_RESOURCE_PATH;
 import static org.junit.Assert.assertEquals;
 
-import java.util.Arrays;
-
-import org.junit.Test;
-
-import de.glasergl.appointment.helper.util.file.AppointmentsConfigurationHandler;
-import de.glasergl.appointment.helper.util.test.GeneralTestElements;
-
 /**
  * Tests the update function of AppointmentsConfigurationHandler.
- * 
+ *
  * @author glasergl
  */
 public class UpdateAppointmentsTest {
-	/**
-	 * Tests whether updating an existing configuration works.
-	 */
-	@Test
-	public void testWithEmptyConfiguration() {
-		final String path = BASE_TEST_RESOURCE_PATH + "testWithEmptyConfiguration-Configuration.json";
-		final AppointmentsConfigurationHandler handler = new AppointmentsConfigurationHandler(path);
-		handler.updateAppointments(Arrays.asList(TEST_APPOINTMENT_1, TEST_APPOINTMENT_2));
-		assertEquals(TEST_APPOINTMENT_1, handler.getAppointment(0));
-		assertEquals(TEST_APPOINTMENT_2, handler.getAppointment(1));
-		assertEquals(2, handler.getSize());
-		GeneralTestElements.deleteTestFileRepresentedBy(handler);
-	}
+    /**
+     * Tests whether updating an existing configuration works.
+     */
+    @Test
+    public void testWithEmptyConfiguration() {
+        final String path = BASE_TEST_RESOURCE_PATH + "testWithEmptyConfiguration-Configuration.json";
+        final AppointmentsConfigurationHandler handler = new AppointmentsConfigurationHandler(path);
+        handler.updateAppointments(Arrays.asList(TEST_APPOINTMENT_1, TEST_APPOINTMENT_2));
+        assertEquals(TEST_APPOINTMENT_1, handler.getAppointment(0));
+        assertEquals(TEST_APPOINTMENT_2, handler.getAppointment(1));
+        assertEquals(2, handler.getSize());
+        GeneralTestElements.deleteTestFileRepresentedBy(handler);
+    }
 
-	/**
-	 * Tests whether updating a configuration with existing appointments works.
-	 */
-	@Test
-	public void testWithExistingAppointments() {
-		final String path = BASE_TEST_RESOURCE_PATH + "testWithExistingAppointments-Configuration.json";
-		final AppointmentsConfigurationHandler handler = new AppointmentsConfigurationHandler(path);
-		handler.updateAppointments(Arrays.asList(TEST_APPOINTMENT_3, TEST_APPOINTMENT_1));
-		handler.updateAppointments(Arrays.asList(TEST_APPOINTMENT_2));
-		assertEquals(TEST_APPOINTMENT_2, handler.getAppointment(0));
-		assertEquals(1, handler.getSize());
-		GeneralTestElements.deleteTestFileRepresentedBy(handler);
-	}
+    /**
+     * Tests whether updating a configuration with existing appointments works.
+     */
+    @Test
+    public void testWithExistingAppointments() {
+        final String path = BASE_TEST_RESOURCE_PATH + "testWithExistingAppointments-Configuration.json";
+        final AppointmentsConfigurationHandler handler = new AppointmentsConfigurationHandler(path);
+        handler.updateAppointments(Arrays.asList(TEST_APPOINTMENT_3, TEST_APPOINTMENT_1));
+        handler.updateAppointments(List.of(TEST_APPOINTMENT_2));
+        assertEquals(TEST_APPOINTMENT_2, handler.getAppointment(0));
+        assertEquals(1, handler.getSize());
+        GeneralTestElements.deleteTestFileRepresentedBy(handler);
+    }
 }
